# js

./: .gitignore  CHANGELOG.md  CLAUDE.md  PLAN.md  README.md  TODO2.md  justfile  pyproject.toml
docs/: README.md  artifact.md  config.example.toml  configuration-and-sessions.md  drain.md  inline-directives.md  models-and-providers.md  nonblocking-windows.md  subagents.md  technical-guide.md  testing-and-development.md  tool-system.md  tools-reference.md  user-guide.md  wiki.md
docs/ircii/: event-system.md  ircii_dsl.py  ircii_test.irc
js/: __init__.py  __main__.py  attach.py  capped_process.py  cli.py  codex_auth.py  codex_provider.py  colors.py  commit_helper.py  config.py  drain.py  events.py  login_cli.py  logins.py  memory.py  model_client.py  model_metadata.py  output.py  paths.py  persona.py  picker.py  promptexpand.py  providers.py  reasoning.py  replcomplete.py  routing.py  runtime.py  sampling.py  setcmd.py  settings.py  stats.py  supervisor.py  tool_args.py  tools.py  transcript.py  tui.py
js/toolkit/: __init__.py  core.py  descriptions.py  fs.py  meta.py  process_net.py  registry.py  sanitize.py
js/toolkit/artifact/: __init__.py  prompts.py
js/toolkit/tool_descriptions/: artifact_curate.md  artifact_ingest.md  artifact_overview.md  artifact_read.md  artifact_search.md  artifact_write_page.md  fetch.md  plan.md  (+23 more)
prompts/commit/: 00-tools.md  00-tools.yaml  01-prompt.md
prompts/defaultagent/: 00-tools.md  00-tools.yaml  01-prompt.md
review/: OPEN-ITEMS.md  TODO-original-pre-scrub.md  js-recovery-plain-english.md  js-recovery-review-packet.md
tests/: test_agent_model_selection.py  test_agent_tool_surface.py  test_artifact_native_tools.py  test_async_stream.py  test_attach.py  test_bench_mode.py  test_cli_prompt_mode.py  test_codex_oauth.py  test_commit_cli.py  test_commit_helper.py  test_config_compaction_layers.py  test_config_runtime_plumbing.py  test_custom_login_routing.py  test_debug_autolog.py  test_docs_guidance.py  test_drain_flags.py  test_drain_harness.py  test_effective_settings.py  test_extra_flag.py  test_fan_out.py  test_fan_out_deadlock.py  test_fetch.py  test_fs_search.py  test_interrupt_preserve.py  test_ircii_loader_events.py  test_jobs_cancel_commands.py  test_json_flags.py  test_local_probe.py  test_login_cli.py  test_login_compact_cmds.py  test_logins.py  test_memory.py  test_memory_config_harness.py  test_meta_registry_cluster.py  test_meta_tool_behavior.py  test_migrate_config.py  test_model_client.py  test_model_metadata.py  test_nonblocking_repl.py  test_output.py  (+24 more)
(+6 files in other folders)
