[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "js"
version = "0.1.0"
description = "LO-shaped AI SDK agent with hacking tools"
requires-python = ">=3.12"
dependencies = [
    "ai[openai,anthropic]==0.2.0",
    "prompt_toolkit>=3.0",
    "PyYAML>=6.0",
    "textual>=0.85",
    "tomli_w>=1.0",
    "platformdirs>=4.0",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0",
    "Pillow>=10.0",
]

[project.scripts]
js = "js.cli:main"
js-drain = "js.drain:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["js*"]

[tool.pytest.ini_options]
markers = [
    "e2e: exercises a complete user-visible runtime path",
    "ai_provider: requires configured ai-python provider credentials or local OpenAI-compatible endpoint",
    "vision: requires a reachable local vision model (ollama gemma4:e4b) and Pillow",
]

[tool.setuptools.package-data]
"js.toolkit" = ["tool_descriptions/*.md"]

# dev tooling for agents hacking this code (and for the justfile quality
# recipes). synced into the project env by `uv sync`, so ruff lands on the
# venv PATH and js agents can call it through the shell tool directly.
[dependency-groups]
dev = [
    "ruff>=0.15",
]

[tool.ruff]
line-length = 100
# giant prompt-string template builder; linting it is pure noise.
extend-exclude = ["js/toolkit/wiki/prompts.py"]

[tool.ruff.lint]
# defaults already cover E (errors) + F (pyflakes); add pyupgrade.
extend-select = ["UP"]
